--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "consumption_buddy",
   "version": "0.0.1",
   "private": true,
+  "description": "An Ionic project",
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
@@ -25,6 +26,7 @@
     "less-loader": "^11.0.0",
     "lodash": "^4.17.21",
     "pinia": "^2.0.14",
+    "register-service-worker": "^1.7.1",
     "vue": "^3.2.21",
     "vue-i18n": "^9.1.10",
     "vue-router": "^4.0.12",
@@ -39,6 +41,7 @@
     "@vue/cli-plugin-babel": "~5.0.0-rc.1",
     "@vue/cli-plugin-e2e-cypress": "~5.0.0-rc.1",
     "@vue/cli-plugin-eslint": "~5.0.0-rc.1",
+    "@vue/cli-plugin-pwa": "^5.0.0-rc.3",
     "@vue/cli-plugin-router": "~5.0.0-rc.1",
     "@vue/cli-plugin-typescript": "~5.0.0-rc.1",
     "@vue/cli-plugin-unit-jest": "~5.0.0-rc.1",
@@ -57,6 +60,5 @@
     "sass-loader": "^13.0.0",
     "ts-jest": "^27.0.7",
     "typescript": "^4.3.5"
-  },
-  "description": "An Ionic project"
+  }
 }
