--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
-  "name": "consumption_buddy",
+  "name": "consumptionbuddy",
   "version": "0.0.1",
   "private": true,
   "description": "An Ionic project",
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
+    "build:docs": "vue-cli-service build --mode docs",
     "test:unit": "vue-cli-service test:unit",
     "test:e2e": "vue-cli-service test:e2e",
     "lint": "vue-cli-service lint"
