--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -5,8 +5,15 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - 
+        name: Docker Login
+        uses: docker/login-action@v2.0.0
+        with:
+          registry: ghcr.io
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
+      - 
         name: Build and push Docker images
         uses: docker/build-push-action@v3.0.0
         with:
           push: true
-          tags: user/app:latest
+          tags: ghcr.io/tobiasbeck/consumption_buddy:latest
