--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,19 +1,22 @@
 name: Build Docker
 on: [push]
 jobs:
-  docker:
+  build_image:
     runs-on: ubuntu-latest
     steps:
-      - 
-        name: Docker Login
+      - name: Docker Login
         uses: docker/login-action@v2.0.0
         with:
           registry: ghcr.io
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
-      - 
-        name: Build and push Docker images
+      - name: Extract version
+        id: extract_version
+        uses: Saionaro/extract-package-version@v1.0.6
+      - name: Print version
+        run: echo ${{ steps.extract_version.outputs.version }}
+      - name: Build and push Docker images
         uses: docker/build-push-action@v3.0.0
         with:
           push: true
-          tags: ghcr.io/tobiasbeck/consumption_buddy:latest
+          tags: ghcr.io/tobiasbeck/consumption_buddy:${{ steps.package-version.outputs.current-version}}
