--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -4,7 +4,10 @@ jobs:
   build_image:
     runs-on: ubuntu-latest
     steps:
-      - name: Docker Login
+      - name: Checkout code
+        uses: actions/checkout@master
+      - 
+        name: Docker Login
         uses: docker/login-action@v2.0.0
         with:
           registry: ghcr.io
@@ -15,7 +18,8 @@ jobs:
         uses: Saionaro/extract-package-version@v1.0.6
       - name: Print version
         run: echo ${{ steps.extract_version.outputs.version }}
-      - name: Build and push Docker images
+      - 
+        name: Build and push Docker images
         uses: docker/build-push-action@v3.0.0
         with:
           push: true
