--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -16,11 +16,9 @@ jobs:
       - name: Extract version
         id: extract_version
         uses: Saionaro/extract-package-version@v1.0.6
-      - name: Print version
-        run: echo ${{ steps.extract_version.outputs.version }}
       - 
         name: Build and push Docker images
         uses: docker/build-push-action@v3.0.0
         with:
           push: true
-          tags: ghcr.io/tobiasbeck/consumption_buddy:${{ steps.package-version.outputs.current-version}}
+          tags: ghcr.io/tobiasbeck/consumption_buddy:${{ steps.extract_version.outputs.version }}
